# trdv

./: .gitignore  README.md  pyproject.toml
src/trdv/: __init__.py  client.py  collector.py  const.py  enums.py  exceptions.py  main.py  parsers.py  session.py  ticker.py  utils.py  websocket.py
src/trdv/models/: __init__.py  fundamentals.py  history.py  news.py  options.py  quote.py  symbol.py  user.py
