[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[project]
name = "trdv"
version = "0.1.0"
description = "A simple package to interact with TradingView"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Daniel Gattringer", email = "gattringer.dan@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["tradingview", "trading", "finance", "stocks", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.12.15",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "websockets>=15.0.1",
]

